Playback and permissions handling

--- a/PitchPerfect/Info.plist
+++ b/PitchPerfect/Info.plist
@@ -66,5 +66,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>App will record audio and plays it back with different effects</string>
 </dict>
 </plist>
